# Dissertation

./: .clang-format  .gitignore  .nitpick.toml  .pre-commit-config.yaml  CMakeLists.txt  README.md  citation.cff
figures/: comparing-potentials.tex  leapfrog.tex  potential-function.tex  problem-setting.tex
figures/logos/: ox-logo-blue.eps  ox-rect.eps  oxlogo.eps
figures/results/morse-3d/: simulation-quiver-3d.eps
literature/: sources.bib
playground/: energyfunction.jl  radialjacobiexample.jl  theorem216.jl
presentation/: .gitignore  beamercolorthemeoxonian.sty  beamerfontthemeoxonian.sty  beamerinnerthemeoxonian.sty  beamerthemeoxonian.sty  final-5-minutes.tex  longer.tex  presentation.tex
presentation/figures/: potential-function.tex  problem-setting.tex
presentation/theme/: macros.tex
presentation/theme/logos/: ox-circle.eps
simulator/: Box.cpp  Box.h  CMakeLists.txt  Simulator.cpp  Simulator.h  attractiverepulsive.jl  experiments.cpp  main.cpp  simulator.jl
solver/: analyticsolutions.jl  attractiverepulsive.jl  generalkernel.jl  parameters.jl  plotall.jl  plots.jl  solver.jl  tests.jl  utils.jl
thesis/: customisations.tex  htlatex.cfg  macros.tex  thesis.tex  thesistitlepage.sty
thesis/chapters/: abstract.tex  acknowledgements.tex  appendix.tex  conclusion.tex  general-kernel-spectral-method.tex  implementation-and-results.tex  introduction.tex  notes.tex  particle-interaction-theory.tex  particle-simulator.tex  spectral-method.tex
thesis/chapters/bits/: ansatz.tex  beta-function.tex  bound-on-the-error.tex  chebyshev-polynomials.tex  (+22 more)
